finally fixed overlaping text error

--- a/css/main.css
+++ b/css/main.css
@@ -594,16 +594,20 @@ body {
                 font-size: 25px;
                 display: grid;
                 grid-template-columns: 1fr 1fr;
-                grid-template-rows: auto;
+                grid-template-rows: 1fr;
             }
             .chooseClothesLeft {
                 grid-column: 1/2;
+                grid-row: 1/2;
                 display: flex;
                 flex-direction: column;
             }
             .chooseClothesProduct {
                 display: flex;
                 align-items: baseline;
+            }
+            .chooseClothesProduct:last-of-type {
+                margin-top: 100px;
             }
             .chooseClothesNumber {  /* span */
                 font-size: 16px;
@@ -626,7 +630,7 @@ body {
                 word-break: keep-all;
             }
             .chooseClothesRight {
-                grid-column: 1/3;
+                grid-column: 2/3;
             }
             .chooseClothesRight figure {
                 float: right;
